--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <p>Iremos criar soluções criativas!</p>
         <img src="images/image.png" alt="Desenvolvimento de Interfaces Web">
     </main>
+    <nav><ul>
+        <li><a href="lab1/index.html">Lab 1</a></li>
+        <li><a href="lab2/index.html">Lab 1</a></li>
+    </ul></nav>
     <footer>
         <p>Universidade Lusófona © 2025</p>
     </footer>
