--- a/lab2/montijo.html
+++ b/lab2/montijo.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Montijo</title>
+            <link rel="stylesheet" href="styles2.css">
     </head>
     <body>
         <header>
-            <h1>A minha Cidade</h1>
+            <img src="images/Sem título.jpg" alt="Bandeira do Montijo">
         </header>
         <nav>
             <a href="montijo.html">Home</a>
@@ -16,7 +17,7 @@
         </nav>
         <main>
             <h2>Montijo</h2>
-            <p>ldeia Galega d'outrora <br>
+            <p>Aldeia Galega d'outrora <br>
 Das esperas e das touradas<br>
 Dos fados e guitarradas<br>
 És o Montijo de agora<br>
