--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>A minha cidade</title>
+    <title>Montijo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
