--- a/lab2/localizacao.html
+++ b/lab2/localizacao.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Montijo</title>
+            <link rel="stylesheet" href="styles2.css">
+
     </head>
     <body>
         <header>
-            <h1>A minha Cidade</h1>
+            <img src="images/Sem título.jpg" alt="Bandeira do Montijo">
         </header>
         <nav>
             <a href="montijo.html">Home</a>
@@ -14,7 +16,14 @@
             <a href="multimedia.html">Multimédia</a>
             <a href="informacao.html">Informação</a>
         </nav>
-       
+       <h2>Montijo</h2>
+            <p>Aldeia Galega d'outrora <br>
+Das esperas e das touradas<br>
+Dos fados e guitarradas<br>
+És o Montijo de agora<br>
+Vila princesa, o trabalho é seu brasão<br>
+E a gente é bem portuguesa
+Como manda a tradição</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49816.44463857172!2d-9.03202750315385!3d38.705689871692925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1939eb3ac02dd7%3A0x42cc94a7d11be406!2sMontijo!5e0!3m2!1spt-PT!2spt!4v1758191969775!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <footer>
             <p>DIW 2025</p>
