--- a/lab3/localizacao.html
+++ b/lab3/localizacao.html
@@ -17,7 +17,14 @@
         </nav>
     </header>
     <main>
-        <h2>Montijo</h2>
+        <h2>Localização</h2>
+    
+    <p>Montijo é uma cidade situada na margem sul do rio Tejo, na Península de Setúbal,<br>
+         no distrito de Setúbal, em Portugal continental. Faz parte da Área Metropolitana de Lisboa,<br>
+          estando a apenas 15 km da capital, conectada pela icónica Ponte Vasco da Gama. O município ocupa uma área de 348,62 km²,<br>
+           com uma população de cerca de 55.732 habitantes (2021), e beneficia de um clima mediterrâneo com invernos suaves (médias de 10-15°C)<br>
+            e verões quentes (acima de 25°C). A sua localização estratégica no estuário do Tejo favorece atividades como a pesca, a agricultura e o turismo,<br>
+             com paisagens que misturam rios, salinas e planícies férteis da região do Ribatejo.</p>
         <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49816.44463857172!2d-9.03202750315385!3d38.705689871692925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1939eb3ac02dd7%3A0x42cc94a7d11be406!2sMontijo!5e0!3m2!1spt-PT!2spt!4v1758191969775!5m2!1spt-PT!2spt" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
