--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt">
-
 <head>
-    <meta charset="utf-8">
-    <title>Primeira Página</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page Responsiva</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <header>
-        <h1>Primeira Página Web!</h1>
-    </header>
-    <main>
-        <p>Eis a minha primeira página Web!</p>
-        <p>
-            Na Unidade Curricular de
-            <a href="https://moodle.ensinolusofona.pt/course/view.php?id=11232"> Desenvolvimento de Interfaces Web
-            </a>
-            abordaremos as seguintes tecnologias Web &#127760;:
-        </p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React e Next.js</li>
-        </ul>
-        <p>Iremos criar soluções criativas!</p>
-        <img src="images/image.png" alt="Desenvolvimento de Interfaces Web">
-    </main>
-    <nav><ul>
-        <li><a href="lab1/index.html">Lab 1</a></li>
-        <li><a href="lab2/index.html">Lab 2</a></li>
-    </ul></nav>
-    <footer>
-        <p>Universidade Lusófona © 2025</p>
-    </footer>
-</body>
+  <nav>
+    <ul>
+      <li><a href="#inicio">Início</a></li>
+      <li><a href="#projetos">Projetos</a></li>
+      <li><a href="#disciplina">Interfaces Web</a></li>
+    </ul>
+  </nav>
 
+  <section id="inicio">
+    <div class="content">
+      <h1>Seja Bem-Vindo!</h1>
+      <p>Explore um mundo de inovação e criatividade.</p>
+      <button onclick="document.getElementById('projetos').scrollIntoView({ behavior: 'smooth' });">Ver Projetos</button>
+    </div>
+  </section>
+
+  <section id="projetos">
+    <h2>Projetos</h2>
+    <div class="project-cards">
+      <div class="card">
+        <h3>Lab 1</h3>
+        <p>Estrutura base e semântica.</p>
+        <a href="lab1/index.html">Saiba Mais</a>
+      </div>
+      <div class="card">
+        <h3>Lab 2</h3>
+        <p>Estilos e layout exressivo.</p>
+        <a href="lab2/index.html">Saiba Mais</a>
+      </div>
+      <div class="card">
+        <h3>Lab 3</h3>
+        <p>Interatividade com JS.</p>
+        <a href="lab3/index.html">Saiba Mais</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="disciplina">
+    <h2>Interfaces Web</h2>
+    <div class="content">
+      <p>Esta disciplina explora os fundamentos de design e desenvolvimento de interfaces web responsivas, focando em acessibilidade e usabilidade.</p>
+    
+    </div>
+  </section>
+  <footer>
+    <p>&copy; 2025 FaiscaCode. Todos os direitos reservados. DIW 2025</p>
+  </footer>
+</body>
 </html>
